<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ViewRadioStationLicenceActivity">

    <TextView
            android:text="@string/search_result"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintWidth_percent="0.88"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/latest_update_date"
            android:id="@+id/search_result"/>

    <TextView
            android:text="@string/latest_update_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintWidth_percent="0.88"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_result"
            app:layout_constraintBottom_toTopOf="@id/totalCount"
            android:id="@+id/latest_update_date"/>

    <TextView
            android:text="@string/total_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintWidth_percent="0.88"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/latest_update_date"
            app:layout_constraintBottom_toTopOf="@id/search_result_list"
            android:id="@+id/totalCount"/>

    <ListView
            android:id="@+id/search_result_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintWidth_percent="0.88"
            app:layout_constraintHeight_percent="0.640"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/totalCount"
            app:layout_constraintBottom_toTopOf="@id/output_as_a_csv"/>

    <Button
            android:text="@string/output_as_a_csv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintWidth_percent="0.88"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_result_list"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/output_as_a_csv"/>


</androidx.constraintlayout.widget.ConstraintLayout>