<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:text="@string/number_of_acquisitions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintWidth_percent="0.88"
            app:layout_constraintBottom_toTopOf="@id/selectTotalCount"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/number_of_acquisitions"/>
    <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/primary_text_dark"
            app:layout_constraintWidth_percent="0.88"
            app:layout_constraintBottom_toTopOf="@id/regionalBureauOfTelecommunications"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/number_of_acquisitions"
            android:id="@+id/selectTotalCount"/>
    <TextView
            android:text="@string/regional_bureau_of_telecommunications"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintWidth_percent="0.88"
            app:layout_constraintBottom_toTopOf="@id/selectRegionalBureauOfTelecommunications"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/selectTotalCount"
            android:id="@+id/regionalBureauOfTelecommunications"/>
    <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/primary_text_dark"
            app:layout_constraintWidth_percent="0.88"
            app:layout_constraintBottom_toTopOf="@id/callSigns"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/regionalBureauOfTelecommunications"
            android:id="@+id/selectRegionalBureauOfTelecommunications"/>
    <TextView
            android:text="@string/call_signs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintWidth_percent="0.88"
            app:layout_constraintBottom_toTopOf="@id/inputCallSigns"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/selectRegionalBureauOfTelecommunications"
            android:id="@+id/callSigns"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/primary_text_dark"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:ems="10"
            android:hint="@string/call_signs"
            android:importantForAutofill="no"
            android:maxLength="12"
            android:maxLines="1"
            android:inputType="textCapCharacters"
            app:layout_constraintWidth_percent="0.88"
            app:layout_constraintBottom_toTopOf="@id/buttonClear"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/callSigns"
            android:id="@+id/inputCallSigns"/>
    <Button
            android:text="@string/clear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.4"
            app:layout_constraintBottom_toTopOf="@id/describeSourceOfInformation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/buttonSearch"
            app:layout_constraintTop_toBottomOf="@id/inputCallSigns"
            android:id="@+id/buttonClear"/>
    <Button
            android:text="@string/search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.4"
            app:layout_constraintBottom_toTopOf="@id/describeSourceOfInformation"
            app:layout_constraintStart_toEndOf="@id/buttonClear"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputCallSigns"
            android:id="@+id/buttonSearch"/>
    <TextView
            android:text="@string/describe_source_of_information"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:maxLines="8"
            android:scrollHorizontally="true"
            app:layout_constraintWidth_percent="0.88"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonSearch"
            android:id="@+id/describeSourceOfInformation"/>

</androidx.constraintlayout.widget.ConstraintLayout>